sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:17: error: Boolean does not take parameters
        copie(i-n-1,i-n)
             ^